# TDC-SC22

./: 1.py  README.md  build_core_layers_eval.sh  build_end2end_eval.sh  conv-template.cu  cudnn-benchmark.cu  format.cu  main.py  model-tk.py  model.py  nchw.cu  run_core_layers_2080Ti.py  run_core_layers_A100.py  run_core_layers_eval_2080Ti.sh  run_core_layers_eval_A100.sh  shapelist  template.cu  test-tvm.cu  tvm_128_96_14_14.cu  tvm_160_96_28_28.cu  tvm_192_160_7_7.cu  tvm_192_96_28_28.cu  tvm_32_32_56_56.cu  tvm_64_32_112_112.cu  tvm_64_32_14_14.cu  tvm_64_32_224_224.cu  tvm_64_32_28_28.cu  tvm_64_32_56_56.cu  tvm_64_32_7_7.cu  tvm_96_64_28_28.cu  tvm_96_64_7_7.cu
core_convs_eval/2080Ti/: 128_96_14_14.cu  160_96_28_28.cu  192_160_7_7.cu  192_96_14_14.cu  192_96_28_28.cu  32_32_14_14.cu  32_32_28_28.cu  32_32_56_56.cu  32_32_7_7.cu  64_32_112_112.cu  64_32_14_14.cu  64_32_224_224.cu  64_32_28_28.cu  64_32_56_56.cu  64_32_7_7.cu  64_64_56_56.cu  96_64_28_28.cu  96_64_7_7.cu  CMakeLists.txt
core_convs_eval/A100/: 128_96_14_14.cu  160_96_28_28.cu  192_160_7_7.cu  192_96_14_14.cu  192_96_28_28.cu  32_32_14_14.cu  32_32_28_28.cu  32_32_56_56.cu  32_32_7_7.cu  64_32_112_112.cu  64_32_14_14.cu  64_32_224_224.cu  64_32_28_28.cu  64_32_56_56.cu  64_32_7_7.cu  64_64_56_56.cu  96_64_28_28.cu  96_64_7_7.cu  CMakeLists.txt
densenet121-original/src/: main.cu
densenet121-tk/src/: Conv.cu  TenDense.cu  main.cu
densenet121-tvm/src/: Activation.cu  Add.cu  Conv.cu
densenet201-original/src/: Add.cu  Pool.cu  main.cu
densenet201-tk/: CMakeLists.txt
densenet201-tk/src/: TenDense.cu
densenet201-tvm/src/: BatchNorm.cu
inference/: TKConv.py  TTConv.py  datasets.py  main.py  parse_args.py  resnet_inet_tt.py  scratch.sh  ttd.py  utils.py
inference/hp_dicts/: tk_densenet121_hp.py  tk_resnet18_hp.py  tk_resnet50_hp.py
resnet18-original-layer-time/inc/: common.h
resnet18-original-layer-time/src/: BasicBlock.cu  main.cu
resnet18-original/src/: main.cu
resnet18-tk-cudnn/: CMakeLists.txt
resnet18-tk-cudnn-layer-time/inc/: common.h
resnet18-tk-cudnn-layer-time/src/: BasicBlock.cu  main.cu
resnet18-tk-cudnn/src/: Conv.cu  main.cu
resnet18-tvm/src/: Conv.cu
resnet50-original-layer-time/inc/: common.h
resnet50-original-layer-time/src/: BasicBlock.cu  main.cu
resnet50-original/src/: main.cu
resnet50-tk-cudnn-layer-time/: CMakeLists.txt
resnet50-tk-cudnn-layer-time/inc/: common.h
resnet50-tk-cudnn/src/: Add.cu  (+1 more)
vgg16-original/: CMakeLists.txt
(+38 files in other folders)
