cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
project(corelayers LANGUAGES CXX CUDA)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -arch=sm_75")
find_package(OpenMP)
if (OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()
include_directories(/usr/local/cuda/include)
link_directories(/usr/local/cuda/lib64)
add_executable(32_32_7_7 32_32_7_7.cu)
add_executable(32_32_14_14 32_32_14_14.cu)
add_executable(32_32_28_28 32_32_28_28.cu)
add_executable(32_32_56_56 32_32_56_56.cu)
add_executable(64_32_7_7 64_32_7_7.cu)
add_executable(64_32_14_14 64_32_14_14.cu)
add_executable(64_32_28_28 64_32_28_28.cu)
add_executable(64_32_56_56 64_32_56_56.cu)
add_executable(64_32_112_112 64_32_112_112.cu)
add_executable(64_32_224_224 64_32_224_224.cu)
add_executable(64_64_56_56 64_64_56_56.cu)
add_executable(96_64_7_7 96_64_7_7.cu)
add_executable(96_64_28_28 96_64_28_28.cu)
add_executable(128_96_14_14 128_96_14_14.cu)
add_executable(160_96_28_28 160_96_28_28.cu)
add_executable(192_96_14_14 192_96_14_14.cu)
add_executable(192_96_28_28 192_96_28_28.cu)
add_executable(192_160_7_7 192_160_7_7.cu)
target_link_libraries(32_32_7_7 ${CUDA_LIBRARIES} cudnn)
target_link_libraries(32_32_14_14 ${CUDA_LIBRARIES} cudnn)
target_link_libraries(32_32_28_28 ${CUDA_LIBRARIES} cudnn)
target_link_libraries(32_32_56_56 ${CUDA_LIBRARIES} cudnn)
target_link_libraries(64_32_7_7 ${CUDA_LIBRARIES} cudnn)
target_link_libraries(64_32_14_14 ${CUDA_LIBRARIES} cudnn)
target_link_libraries(64_32_28_28 ${CUDA_LIBRARIES} cudnn)
target_link_libraries(64_32_56_56 ${CUDA_LIBRARIES} cudnn)
target_link_libraries(64_32_112_112 ${CUDA_LIBRARIES} cudnn)
target_link_libraries(64_32_224_224 ${CUDA_LIBRARIES} cudnn)
target_link_libraries(64_64_56_56 ${CUDA_LIBRARIES} cudnn)
target_link_libraries(96_64_7_7 ${CUDA_LIBRARIES} cudnn)
target_link_libraries(96_64_28_28 ${CUDA_LIBRARIES} cudnn)

target_link_libraries(128_96_14_14 ${CUDA_LIBRARIES} cudnn)
target_link_libraries(160_96_28_28 ${CUDA_LIBRARIES} cudnn)
target_link_libraries(192_96_14_14 ${CUDA_LIBRARIES} cudnn)
target_link_libraries(192_96_28_28 ${CUDA_LIBRARIES} cudnn)
target_link_libraries(192_160_7_7 ${CUDA_LIBRARIES} cudnn)
